@@ -310,6 +310,9 @@ Version 1.5.2 - SVN
     base URI is now uniformly generated, extraneous cookies are cleaned
     up and session IDs are regenerated upon every login (Thanks to Tomas
     Hoger). [CVE-2009-1580]
+  - Cleanup variable name in address search for compose to clearup confusion.
+  - Remove Javascript from address search page when JavaScript is disabled.
+  - Add "Check All" function to address book when using "in-page" addressbook.
 
 Version 1.5.1 (branched on 2006-02-12)
 --------------------------------------
